--- a/.travis.yml
+++ b/.travis.yml
@@ -170,8 +170,10 @@ script:
   # this builds all libraries and executables (without tests/benchmarks)
   - ${CABAL} v2-build $WITHCOMPILER --disable-tests --disable-benchmarks all | color_cabal_output
   # Building with tests and benchmarks...
-  # build & run tests, build benchmarks
+  # build tests, build benchmarks
   - ${CABAL} v2-build $WITHCOMPILER ${TEST} ${BENCH} all | color_cabal_output
+  # Running tests...
+  - ${CABAL} v2-test $WITHCOMPILER ${TEST} all | color_cabal_output
   # cabal check...
   - (cd ${PKGDIR_frisby} && ${CABAL} -vnormal check)
   # haddock...
