--- a/frisby.cabal
+++ b/frisby.cabal
@@ -36,8 +36,31 @@ library
                        containers,
                        mtl,
                        array,
-                       semigroups
+                       semigroups,
+                       mono-traversable,
+  ghc-options:
+    -Weverything
+    -Wno-missing-kind-signatures
+    -Wno-name-shadowing
   default-language:    Haskell2010
+
+test-suite spec
+  type:              exitcode-stdio-1.0
+  main-is:           Spec.hs
+  hs-source-dirs:    tests
+  other-modules:     Text.Parsers.FrisbySpec
+  build-depends:     base >= 4.7 && < 5
+                   , frisby
+                   , hspec >= 2.7.1
+                   , text
+                   , bytestring
+                   , mono-traversable
+  build-tool-depends: hspec-discover:hspec-discover
+  ghc-options:      -Weverything
+                    -threaded
+                    -rtsopts
+                    -with-rtsopts=-N
+  default-language:  Haskell2010
 
 source-repository head
   type:     git
